--- a/css/main.less
+++ b/css/main.less
@@ -7,7 +7,50 @@
  */
 @shadeZ:1000;
 @dkGray:#17171e;
+@mdGray:#8d8d96;
+@white:#ffffff;
+@bronzeColor:#aa8c49;
 @startOpacity:0;
+@trGothicExt:'trade_gothic_lt_stdextended';
+
+.bronze{color:@bronzeColor;}
+.white{color:@white;}
+.medGray{color:@mdGray;}
+
+.lineHeight10{line-height:10px;}
+.lineHeight18{line-height:18px;}
+.margin5{margin:0px;}
+
+
+
+/* Fonts*/
+
+@font-face {
+    font-family: 'trade_gothic_lt_stdextended';
+    src: url('../fonts/tradegothicltstd-extended-webfont.eot');
+    src: url('../fonts/tradegothicltstd-extended-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/tradegothicltstd-extended-webfont.woff') format('woff'),
+         url('../fonts/tradegothicltstd-extended-webfont.ttf') format('truetype'),
+         url('../fonts/tradegothicltstd-extended-webfont.svg#trade_gothic_lt_stdextended') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.trGoth12{font-family:@trGothicExt; font-size:12px;}
+.trGoth12bold{font-family:@trGothicExt; font-size:12px; font-weight:bold;}
+
+.trGoth16{font-family:@trGothicExt; font-size:16px;}
+.trGoth16bold{font-family:@trGothicExt; font-size:16px; padding-top:5px; padding-bottom:5px; font-weight:bold;}
+
+.trGoth21{font-family:@trGothicExt; font-size:21px;}
+.trGoth21bold{font-family:@trGothicExt; font-size:21px; font-weight:bold;}
+
+.trGoth30{font-family:@trGothicExt; font-size:30px;}
+.trGoth30bold{font-family:@trGothicExt; font-size:30px; font-weight:bold;}
+
+.trGoth35{font-family:@trGothicExt; font-size:35px;}
+.trGoth35bold{font-family:@trGothicExt; font-size:35px; font-weight:bold;}
 
 /*
  * HTML5 Boilerplate
@@ -49,11 +92,23 @@ body {
  */
 hr {
   display: block;
-  height: 1px;
+  width: 95%;
+  height: 2px;
   border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0; }
+  border-top: 2px solid #37373d;
+  margin-top:60px;
+  margin-bottom:60px; 
+}
+
+hr.short {
+  display: block;
+  width: 120px;
+  height: 2px;
+  border: 0;
+  border-top: 2px solid @bronzeColor;
+  margin-top:25px;
+  margin-bottom:15px; 
+}
 
 /*
  * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
@@ -243,21 +298,54 @@ textarea {
    Custom styles
    ========================================================================== */
 
-
-#stageShade{position:absolute; width:100%; height:100%; background-color:@dkGray; z-index:@shadeZ; opacity:0;}
 #headerContainer{position:relative; height:160px; width:100%;}
-#featureOneContainer{position:relative; height:450px; width:100%;}
-#featureOneContainer img{width:100%;}
+#stageShade{position:absolute; width:100%; height:100%; background-color:@dkGray; z-index:@shadeZ; opacity:0;}
+#rowOne{}
+#rowOne img{width:100%;}
+#getUpdates{text-align:center; margin-top:50px;}
+
+// #rowTwo{text-align:center; height: 723px; background-image:url('../images/homepage/row-two-background-640x723.png'); background-size:100%; background-repeat:no-repeat;}
+#rowTwo{text-align:center;}
+#rowTwoHeaderCopy{position:absolute; width:98%; height:120px; z-index:22;}
+#rowTwoHeroImage{position:absolute; margin-top:20px; width:100%; z-index:20;}
+
+#rowTwoHero{position:relative; width:100%; z-index:20; }
+#rowTwoCopy{position:absolute; z-index:21;}
 
 
-
+.getUpdatesBtn {
+   background-color: rgba(170,139,73,1);width: 255px; height: 55px; display: inline-block; border:0; cursor:pointer;
+}
+.getUpdatesBtn:hover {
+  background-color: black; width: 255px; height: 55px; display: inline-block; border:0; 
+}
+.getUpdatesBtn:active {
+}
 
 /*
  * Desktop Styles
  */
-@media only screen and (min-width:768px)and(max-width:989px){
-  
-  
-  
+@media only screen and (min-width:768px){
+  #headerContainer{position:relative; height:160px; width:100%;}
+  #headerContent{position:relative; width:90%; margin-left:auto; margin-right:auto; background-color:red;}
+  #headerCopy{position:absolute; top: 40px; left:10px; }
+  #headerLogo{position:absolute; top: 75px; right:20px;}
+  .textBlockTitle{line-height:0px;}
+
 }
+
+/* Mobile Styles*/
+@media only screen and (max-width:768px){
+  #headerContent{position:absolute; width:80%; }
+  #headerCopy{position:absolute; top: 40px; left:10px; }
+  #headerLogo{position:absolute; top: 110px; left:10px;}
+   .textBlockTitle{line-height:22px;margin-bottom:-10px;}
+}
+
+
+
+
+
+
+
 
